# libdatatree

./: CMakeLists.txt  README.md  manifest  repositories.manifest
libdatatree/: buildfile
libdatatree/crails/: datatree.hpp
libdatatree/crails/std/: datatree.cpp  datatree.hpp
tests/basics/: buildfile  driver.cpp
